Attempt to restore OpenGL 2.1 support on non-OSX systems

Partially reverts d0a329fa4d83576d729baae5a0f65f5b7810f289 (D4506)
and reverts the effect of 96835a05b874abe85b95e1aff525faa4a91368a8.

`KisOpenGLCanvas2` inheritting from a versioned `QOpenGLFunctions_x_x`
isn't the best idea just to get `glLogicOp`, so I try to use an
alternative method to get it.

`glLogicOp` is supposed to be in OpenGL core functions since full
desktop OpenGL 1.0, just never had been a function in OpenGL ES 2.0 or
above, so it should be available even with `QOpenGLFunctions_1_0`. I
used `QOpenGLFunctions_2_1` just because that's the minimum version we
seem to supported before 3.2 release.

BUG: 383281
CCBUG: 363770
Differential Revision: https://phabricator.kde.org/D7405